# NE_OpenGL

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  Engine_SDL2.cpp  Engine_Win32.cpp  FrameBuffer.cpp  FrameBuffer.h  Input.cpp  Main.cpp  Mesh.h  Player.cpp  README.md  Shader.h  Texture.cpp
Shaders/: portal.frag  sky.frag  texture.frag  texture_array.frag
assets/levels/: l2-slope.yaml  l4-doubleSlope.yaml  l5-puzzle.yaml  level1.yaml  level2.yaml  level3.yaml
assets/shaders/: debug.frag  pink.frag  pink.vert  portal.frag  portal.vert  sky.frag  sky.vert  texture.frag  texture.vert  texture_array.frag  texture_array.vert
include/core/camera/: Camera.h
include/core/engine/: Engine.h  GameHeader.h  Timer.h
include/core/input/: Input.h  InputAdapter.h  SDLInputAdapter.h  WindowsInputAdapter.h
include/core/math/: Collider.h  Vector.h
include/game/: DefaultScene.h  LevelConfig.h  LevelManager.h  ObjectFactory.h  Scene.h
include/game/levels/: L1_DoubleTunnel.h  L2_Slope.h  L2_UpDown.h  L3_Scale.h  L3_SmallBig.h  L4_House.h  Level1.h  Level2.h  Level3.h  Level4.h  Level5.h  Level6.h
include/game/objects/base/: Object.h  Physical.h
include/game/objects/environment/: Floorplan.h  Ground.h  House.h  PillarRoom.h  Sky.h
include/game/objects/interactive/: Player.h  Portal.h
include/game/objects/props/: Pillar.h  Sphere.h  Statue.h  Tunnel.h
include/rendering/: FrameBuffer.h  Mesh.h  Shader.h  Texture.h
include/resources/: Resources.h
src/: Main.cpp
src/core/camera/: Camera.cpp
src/core/engine/: Engine.cpp  Engine_SDL2.cpp  Engine_Win32.cpp
src/core/input/: Input.cpp  SDLInputAdapter.cpp  WindowsInputAdapter.cpp
src/core/math/: Collider.cpp
src/game/: DefaultScene.cpp  LevelConfig.cpp  LevelManager.cpp  ObjectFactory.cpp  Scene.cpp
src/game/levels/: L1_DoubleTunnel.cpp  L2_Slope.cpp  L2_UpDown.cpp  L3_Scale.cpp  L3_SmallBig.cpp  L4_House.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp  Level6.cpp
src/game/objects/base/: Object.cpp  Physical.cpp
src/game/objects/interactive/: Player.cpp  Portal.cpp
src/rendering/: FrameBuffer.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
src/resources/: Resources.cpp
